--- a/ECommerce.WebApp/ECommerce.WebApp.csproj
+++ b/ECommerce.WebApp/ECommerce.WebApp.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\ECommerce.Repository\ECommerce.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\admin\Data\" />
+    <Folder Include="Areas\admin\Models\" />
+  </ItemGroup>
+
 </Project>
